Glide added to project

--- a/app/src/main/res/layout/activity_wardrobe_element_adapter.xml
+++ b/app/src/main/res/layout/activity_wardrobe_element_adapter.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/wardrobeElementName"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/wardrobeElementPicture"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        app:srcCompat="@android:color/black" />
 
-    <TextView
-        android:id="@+id/wardrobeElementType"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/wardrobeElementName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/wardrobeElementType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
 </LinearLayout>
