--- a/app/src/main/res/layout/activity_wardrobe_element_view.xml
+++ b/app/src/main/res/layout/activity_wardrobe_element_view.xml
@@ -22,6 +22,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:onClick="onClickReturn"
                 android:text="@string/wardrobe_view_return"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.04"
@@ -66,11 +67,11 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:text="@string/wardrobe_view_material"
-                app:layout_constraintTop_toBottomOf="@+id/elementType"
                 app:layout_constraintBottom_toTopOf="@+id/elementColor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.034"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/elementType" />
 
             <TextView
                 android:id="@+id/elementColor"
@@ -85,20 +86,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/elementMaterial" />
 
-            <LinearLayout
+            <ImageView
                 android:id="@+id/elementPicture"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/elementColor"
-                android:orientation="vertical"></LinearLayout>
+                app:srcCompat="@android:color/black" />
 
         </LinearLayout>
 
