--- a/app/src/main/res/layout/activity_wardrobe_add_element_confirmation.xml
+++ b/app/src/main/res/layout/activity_wardrobe_add_element_confirmation.xml
@@ -4,70 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MenuActivity">
+    tools:context=".WardrobeAddElementConfirmation">
 
     <LinearLayout
         android:id="@+id/header"
+        style="@style/HeaderBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        style="@style/HeaderBackground">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/openMenu"
+            style="@style/HeaderButton"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:onClick="onCloseMenu"
-            android:text="@string/menu_close"
+            android:onClick="onReturn"
+            android:text="@string/return_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            style="@style/HeaderButton"/>
+            app:layout_constraintVertical_bias="0.0" />
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/menuChoices"
+    <TextView
+        android:id="@+id/wardrobeAddFormConfirmation"
+        style="@style/AddFormConfirmation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:textAlignment="center"
+        android:drawableLeft="@drawable/ic_baseline_done"
+        android:drawableTint="#A9EEB8"
+        android:text="@string/new_wardrobe_element_saved"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintVertical_bias="0.0">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/menuHome"
-                android:onClick="onClickHome"
-                android:text="@string/menu_home"
-                style="@style/MenuButton" />
-
-            <Button
-                android:id="@+id/menuWardrobe"
-                android:onClick="onClickWardrobe"
-                android:text="@string/menu_wardrobe"
-                style="@style/MenuButton"  />
-
-            <Button
-                android:id="@+id/exitApp"
-                android:onClick="onExitApp"
-                android:text="@string/menu_exit"
-                style="@style/MenuButton"  />
-        </LinearLayout>
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 
 </android.support.constraint.ConstraintLayout>
