--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -16,12 +14,60 @@
         <item name="android:background">@drawable/header_button</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:gravity">center</item>
-        <item name="android:fontFamily">muli_regular</item>
+        <item name="android:fontFamily">@font/muli_regular</item>
         <item name="android:layout_margin">16dp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">32dp</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+    </style>
+
+    <style name="MenuButton">
+        <item name="android:background">@drawable/menu_button</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">@font/muli_regular</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="AddFormInfo">
+        <item name="android:textColor">#FFBDBD</item>
+        <item name="android:fontFamily">@font/tajawal_light</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="AddFormConfirmation">
+        <item name="android:textColor">#FFBDBD</item>
+        <item name="android:fontFamily">@font/tajawal_light</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="AddFormLabel">
+        <item name="android:fontFamily">@font/tajawal_light</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <style name="AddPictureButton">
+        <item name="android:background">@drawable/picture_button</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">@font/tajawal_light</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
