--- a/app/src/main/res/layout/activity_wardrobe_add_element_confirmation.xml
+++ b/app/src/main/res/layout/activity_wardrobe_add_element_confirmation.xml
@@ -33,8 +33,9 @@
     <TextView
         android:id="@+id/wardrobeAddFormConfirmation"
         style="@style/AddFormConfirmation"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
