--- a/app/src/main/res/layout/activity_wardrobe_add_element.xml
+++ b/app/src/main/res/layout/activity_wardrobe_add_element.xml
@@ -1,161 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:id="@+id/myDrawer"
+    tools:openDrawer="start"
+    android:layout_gravity="left"
     tools:context=".WardrobeAddElement"
-    android:id="@+id/main">
+    android:focusableInTouchMode="true">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/wardrobeAddFormSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#A9EEB8"
-        app:borderWidth="0dp"
-        android:onClick="onSubmitForm"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_baseline_done"
-        android:layout_margin="16dp" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/wardrobeAddFormSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#A9EEB8"
+            app:borderWidth="0dp"
+            android:onClick="onSubmitForm"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_baseline_done"
+            android:layout_margin="16dp" />
 
         <LinearLayout
-            android:id="@+id/header"
-            style="@style/HeaderBackground"
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                style="@style/HeaderButton"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:onClick="onReturn"
-                android:text="@string/return_button"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-        </LinearLayout>
-
-        <ScrollView
-            android:id="@+id/formScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/header">
+            android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/header"
+                style="@style/HeaderBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/wardrobeAddFormInfo"
-                    style="@style/AddFormInfo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/wardrobe_add_form_info"
-                    android:textAlignment="center"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormTypeLabel"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/wardrobeAddFormTypeLabel"
-                    style="@style/AddFormLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/wardrobe_add_form_type_label"
-                    android:textColor="#428BCA"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormType"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormInfo" />
-
-                <Spinner
-                    android:id="@+id/wardrobeAddFormType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormColorLabel"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormTypeLabel" />
-
-                <TextView
-                    android:id="@+id/wardrobeAddFormColorLabel"
-                    style="@style/AddFormLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/wardrobe_add_form_color_label"
-                    android:textColor="#428BCA"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormColor"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormType" />
-
-                <Spinner
-                    android:id="@+id/wardrobeAddFormColor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormNameLabel"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormColorLabel" />
-
-                <TextView
-                    android:id="@+id/wardrobeAddFormNameLabel"
-                    style="@style/AddFormLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/wardrobe_add_form_name_label"
-                    android:textColor="#428BCA"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormName"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormColor" />
-
-                <EditText
-                    android:id="@+id/wardrobeAddFormName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="@string/wardrobe_add_form_name_hint"
-                    android:inputType="textPersonName"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormPictureLabel"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormNameLabel" />
-
-                <TextView
-                    android:id="@+id/wardrobeAddFormPictureLabel"
-                    style="@style/AddFormLabel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/wardrobe_add_form_picture_label"
-                    android:textColor="#428BCA"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormPicture"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormName" />
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/wardrobeAddFormPicture"
+                    android:id="@+id/openMenu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_menu_larger"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+            </LinearLayout>
+
+            <ScrollView
+                android:id="@+id/formScrollView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginTop="2dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/header">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormPictureButton"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormPictureLabel" />
+                    android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/wardrobeAddFormPictureButton"
-                    style="@style/AddPictureButton"
-                    android:onClick="addAPicture"
-                    android:text="@string/wardrobe_add_form_picture_button"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormPicture" />
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
+                    <TextView
+                        android:id="@+id/wardrobeAddFormInfo"
+                        style="@style/AddFormInfo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/wardrobe_add_form_info"
+                        android:textAlignment="center"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormTypeLabel"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+                    <TextView
+                        android:id="@+id/wardrobeAddFormTypeLabel"
+                        style="@style/AddFormLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/wardrobe_add_form_type_label"
+                        android:textColor="#428BCA"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormType"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormInfo" />
+
+                    <Spinner
+                        android:id="@+id/wardrobeAddFormType"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormColorLabel"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormTypeLabel" />
+
+                    <TextView
+                        android:id="@+id/wardrobeAddFormColorLabel"
+                        style="@style/AddFormLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/wardrobe_add_form_color_label"
+                        android:textColor="#428BCA"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormColor"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormType" />
+
+                    <Spinner
+                        android:id="@+id/wardrobeAddFormColor"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormNameLabel"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormColorLabel" />
+
+                    <TextView
+                        android:id="@+id/wardrobeAddFormNameLabel"
+                        style="@style/AddFormLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/wardrobe_add_form_name_label"
+                        android:textColor="#428BCA"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormName"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormColor" />
+
+                    <EditText
+                        android:id="@+id/wardrobeAddFormName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="@string/wardrobe_add_form_name_hint"
+                        android:inputType="textPersonName"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormPictureLabel"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormNameLabel" />
+
+                    <TextView
+                        android:id="@+id/wardrobeAddFormPictureLabel"
+                        style="@style/AddFormLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/wardrobe_add_form_picture_label"
+                        android:textColor="#428BCA"
+                        app:layout_constraintBottom_toTopOf="@id/wardrobeAddFormPicture"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormName" />
+
+                    <ImageView
+                        android:id="@+id/wardrobeAddFormPicture"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scaleType="fitCenter"
+                        android:adjustViewBounds="true"
+                        />
+
+                    <Button
+                        android:id="@+id/wardrobeAddFormPictureButton"
+                        style="@style/AddPictureButton"
+                        android:onClick="addAPicture"
+                        android:text="@string/wardrobe_add_form_picture_button"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormPicture" />
+                </LinearLayout>
+            </ScrollView>
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/dresscodeMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/dresscode_menu" />
+
+</android.support.v4.widget.DrawerLayout>
