--- a/app/src/main/res/layout/activity_wardrobe_add_element.xml
+++ b/app/src/main/res/layout/activity_wardrobe_add_element.xml
@@ -28,33 +28,16 @@
             android:layout_margin="16dp" />
 
         <LinearLayout
-            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/header"
-                style="@style/HeaderBackground"
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:id="@+id/openMenu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_menu_larger"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-            </LinearLayout>
+                android:layout_height="?attr/actionBarSize"
+                style="@style/HeaderBackground"
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
             <ScrollView
                 android:id="@+id/formScrollView"
@@ -64,9 +47,10 @@
                 android:layout_marginEnd="2dp"
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="2dp"
+                android:layout_weight="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/header">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -163,7 +147,9 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/wardrobeAddFormPicture" />
                 </LinearLayout>
+
             </ScrollView>
+
         </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
